--- a/sass/style.scss
+++ b/sass/style.scss
@@ -149,6 +149,61 @@
     cursor: pointer;
 }
 
+/* MAIN ACERCA DE */
+
+.container{
+    margin: auto;
+}
+
+.container-section-1{
+    width: 75%;
+    margin: auto;
+    padding: 100px 0;
+}
+
+.section-1-title{
+    font-family: "roboto", sans-serif;
+    font-size: 40px;
+    color: black;
+    font-weight: bold;
+}
+
+.us{
+    
+}
+
+.us-text{
+
+}
+
+.us-paragraph{
+
+}
+
+.paragraph-text{
+
+}
+
+.us-rs{
+
+}
+
+.us-rs-title{
+
+}
+
+.rs-icon{
+
+}
+
+.rs-link{
+
+}
+
+.img-img{
+
+}
+
 /* MAIN HOMBRE*/
 
 .productos{
@@ -206,54 +261,79 @@
 
 /* FOOTER INICIO */
 
-#footer{
-    max-width: 1800px;
-    height: 80px;
-    background-color: #212529;
+.footer {
+    position: relative;
+    width: 100%;
+    background: #212529;
+    min-height: 100px;
+    padding: 20px 50px;
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-around;
-    
-    .footer-links{
-        
-        ul{
-            width: 100%;
-            height: 100%;
-            display: flex;
-
-
-            a{
-                margin-left: 5px;
-            }
-        
-        }
-    } 
-
-    .footer-logo{
-        height: 100%;
-
-        .foto{
-            width: 80px;
-            height: 100%;
-        }
+    flex-direction: column;
     }
 
-    
-    .footer-redes{
-        display: flex;
-        font-size: 30px;
-        a{
-            margin-left: 5px;
-        }
+
+.social-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin: 10px 5px;
+    flex-wrap: wrap;
     }
 
-}
+
+.icon-elem {
+    list-style: none;
+    }
 
 
+.icon {
+    color: white;
+    font-size: 32px;
+    display: inline-block;
+    margin: 0 10px;
+    transition: 0.5s;
+    }
 
 
+.icon:hover {
+    transform: translateY(-10px);
+    }
 
 
+.menu {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    align-items: center;
+    margin: 10px 0;
+    flex-wrap: wrap;
+    }
 
 
+.menu-elem {
+    list-style: none;
+    }
+.menu-icon {
+    color: white;
+    font-size: 20px;
+    display: inline-block;
+    text-decoration: none;
+    margin: 5px 10px;
+    opacity: 0.5;
+    transition: 0.3s;
+    }
 
+.menu-icon:hover {
+    opacity: 1;
+    }
+
+.text {
+    color: white;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    }
