--- a/sass/style.scss
+++ b/sass/style.scss
@@ -231,7 +231,7 @@
     display: flex;
     align-items: center; /* Centra la imagen verticalmente */
     justify-content: center;
-    background-color: #f9f9f9; /* Color de fondo para distinguir la imagen */
+    background-color: #000; /* Color de fondo para distinguir la imagen */
     border-radius: 5px;
     padding: 10px; /* Espacio alrededor de la imagen */
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para destacar la imagen */
