--- a/sass/style.scss
+++ b/sass/style.scss
@@ -246,7 +246,13 @@
 }
 /* MAIN CONTACTO */
 
+main.main-contacto {
+    min-height: calc(100vh - 80px - 100px); /* Ajusta 80px y 100px a la altura de tu header y footer */
+}
+
 .main-contacto{
+    width: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -261,7 +267,7 @@
     grid-template-columns: repeat(2,50%);
     padding: 20px;
     gap: 10px;
-    width: 1000px;
+    width: 100%;
 }
 
 .box-info{
