--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,6 +27,15 @@
     }
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
+}
 
 
 #navbarSupportedContent ul{
