--- a/sass/style.scss
+++ b/sass/style.scss
@@ -164,7 +164,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(rgba(0 0 0 / .8), rgba(0 0 0 / .8)), url(/images/fondos/debb0883c5bfcb992808eea826d3bbcc.jpg);
+    background: linear-gradient(rgba(0 0 0 / .8), rgba(0 0 0 / .8)), url(../images/fondos/debb0883c5bfcb992808eea826d3bbcc.jpg);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -265,7 +265,7 @@ main.main-contacto {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(rgba(0 0 0 / .8), rgba(0 0 0 / .8)), url(/images/fondos/debb0883c5bfcb992808eea826d3bbcc.jpg);
+    background: linear-gradient(rgba(0 0 0 / .8), rgba(0 0 0 / .8)), url(../images/fondos/debb0883c5bfcb992808eea826d3bbcc.jpg);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
