--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(/images/fondos/debb0883c5bfcb992808eea826d3bbcc.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../images/fondos/debb0883c5bfcb992808eea826d3bbcc.jpg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -255,7 +255,7 @@ main.main-contacto {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(/images/fondos/debb0883c5bfcb992808eea826d3bbcc.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../images/fondos/debb0883c5bfcb992808eea826d3bbcc.jpg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
