--- a/sass/presets/_footer.scss
+++ b/sass/presets/_footer.scss
@@ -5,7 +5,7 @@
     width: 100%;
     background: #212529;
     min-height: 100px;
-    padding: 20px 50px;
+    padding: 20px 0;
     display: flex;
     justify-content: center;
     align-items: center;
