--- a/sass/presets/_header.scss
+++ b/sass/presets/_header.scss
@@ -1,32 +1,52 @@
-/* ESTILOS HEADER / NAV */
-
-#header{
+/* HEADER INICIO */
+#header {
     max-width: 1800px;
     height: 80px;
     background-color: #212529;
-    .navbar{
-        width: 100%;
-        height: 80px;
-        display: flex;  
-        justify-content: center;
-        align-items: center;
-        background-color: #212529;
-        position: fixed;
-    }
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+.navbar {
+    width: 100%;
+    height: 80px;
+    display: flex;  
+    justify-content: center;
+    align-items: center;
+    background-color: #212529;
+    position: fixed;
+    z-index: 9999; /* Asegura que el menú se superponga */
 }
 
-main {
-    flex: 1;
-}
-
-
-#navbarSupportedContent ul{
+/* Asegura que los enlaces dentro del menú estén alineados */
+#navbarSupportedContent ul {
     width: 100%;
     justify-content: center;
 }
+
+@media (max-width: 767px) {
+    .navbar {
+        background-color: #212529; /* Menú hamburguesa con fondo oscuro */
+        z-index: 10;
+    }
+}
+
+/* Estilo para el fondo del menú desplegable */
+.navbar-dark .navbar-collapse {
+    background-color: #212529; /* Fondo oscuro similar al del menú principal */
+}
+
+/* Estilo para los enlaces dentro del menú desplegable */
+.navbar-dark .navbar-nav .nav-link {
+    color: #ffffff; /* Letras blancas para un contraste adecuado */
+}
+
+/* Estilo para cuando el enlace es hover o activo */
+.navbar-dark .navbar-nav .nav-link:hover,
+.navbar-dark .navbar-nav .nav-link.active {
+    color: crimson; /* Color de texto al hacer hover o que está activo */
+}
+
+/* Cambiar el color del icono del menú hamburguesa */
+.navbar-dark .navbar-toggler-icon {
+    background-color: white; /* Cambiar el color del icono a blanco para visibilidad */
+}
+
