--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
-@import "presets/reset";
-@import "presets/header";
-@import "presets/main";
-@import "presets/footer";
-@import "presets/queries";
+@use "presets/reset";
+@use "presets/header";
+@use "presets/main";
+@use "presets/footer";
+@use "presets/queries";
