--- a/sass/presets/_footer.scss
+++ b/sass/presets/_footer.scss
@@ -75,32 +75,24 @@
     font-size: 20px;
 }
 
-/* Media queries para móviles */
-@media (max-width: 992px) {
-    .footer {
-        padding: 15px 30px;
-    }
-
-    .footer .menu-icon {
-        font-size: 18px;
-    }
+/* Estilo para los iconos del menú, con transición */
+.menu-icon {
+    color: white;
+    font-size: 20px;
+    display: inline-block;
+    text-decoration: none;
+    margin: 5px 10px;
+    opacity: 0.5;
+    transition: 0.3s;
 }
-@media (max-width: 767px) {
-    .footer {
-        padding: 10px 20px;
-    }
 
-    .menu {
-        background-color: #212529; /* Fondo oscuro para el menú en móvil */
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        z-index: 10; /* Menú por encima del contenido */
-    }
+/* Color crimson al pasar el mouse */
+.menu-icon:hover {
+    opacity: 1;
+    color: crimson;  /* Cambia el color al pasar el mouse */
+}
 
-    .menu-icon {
-        font-size: 18px;
-        color: white; /* Letras blancas */
-    }
+/* Color crimson para el elemento seleccionado */
+.menu-icon.selected {
+    color: crimson;  /* Cambia el color al estar seleccionado */
 }
